--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "start": "live-server --port=5500 --open=./src/index.html"
+    "start": "live-server --port=5500 --open=./src/index.html",
+    "prepare": "husky"
   },
   "keywords": [
     "crud",
@@ -36,8 +37,16 @@
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.6",
     "live-server": "^1.2.2",
     "prettier": "^3.6.2"
+  },
+  "lint-staged": {
+    "*.{js,css,html,json}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   },
   "packageManager": "pnpm@10.15.1"
 }
