chore(eslint): update config with import plugin and rules

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "crud-mahasiswa",
   "version": "1.0.0",
+  "type": "module",
   "description": "Aplikasi CRUD sederhana untuk data mahasiswa dengan HTML, CSS, dan JavaScript.",
   "scripts": {
     "format": "prettier --write .",
@@ -37,6 +38,7 @@
     "@eslint/json": "^0.13.2",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
