--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:fix": "eslint . --fix",
     "start": "live-server --port=5500 --open=./src/index.html",
     "prepare": "husky",
-    "test": "eslint . && prettier --check ."
+    "test": "eslint . && prettier --check .",
+    "commitlint": "commitlint"
   },
   "keywords": [
     "crud",
@@ -34,6 +35,8 @@
     "url": "https://github.com/fajri-farid/pemweb-20251/issues"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.35.0",
     "@eslint/json": "^0.13.2",
     "eslint": "^9.35.0",
