--- a/.vscode/settings.jsonc
+++ b/.vscode/settings.jsonc
@@ -12,5 +12,5 @@
 
   // Atur line ending default menjadi LF (\n)
   // Supaya konsisten dengan .gitattributes & Prettier config
-  "files.eol": "\n"
+  "files.eol": "\n",
 }
